# g2p-cash-transfer-bridge

./: .copier-answers.yml  Dockerfile  README.md  main.py  payement_bridge.py  payment-backend.Dockerfile  tox.ini
.github/workflows/: docker-build.yml  openapi-push.yml  publish.yml
db_scripts/: README.md  deploy.sh
db_scripts/0.1.0/ddl/: 02.tables.sql  03.sequences.sql  04.defaults.sql  05.constraints.sql
g2p-cash-transfer-bridge-api/: README.md  pyproject.toml
g2p-cash-transfer-bridge-api/src/g2p_cash_transfer_bridge_api/: app.py  config.py
g2p-cash-transfer-bridge-api/src/g2p_cash_transfer_bridge_api/controllers/: disbursement_controller.py
g2p-cash-transfer-bridge-api/src/g2p_cash_transfer_bridge_api/services/: payment_multiplexer.py
g2p-cash-transfer-bridge-core/: README.md  pyproject.toml
g2p-cash-transfer-bridge-core/src/g2p_cash_transfer_bridge_core/: app.py  config.py
g2p-cash-transfer-bridge-core/src/g2p_cash_transfer_bridge_core/models/: disburse.py
g2p-cash-transfer-bridge-core/src/g2p_cash_transfer_bridge_core/models/orm/: payment_list.py
g2p-cash-transfer-bridge-core/src/g2p_cash_transfer_bridge_core/services/: id_translate_service.py  payment_multiplexer.py
g2p-payments-bridge-core/: README.md  pyproject.toml
g2p-payments-bridge-core/src/g2p_payments_bridge_core/: __main__.py  app.py  config.py
g2p-payments-bridge-core/src/g2p_payments_bridge_core/controllers/: disbursement_controller.py
g2p-payments-bridge-core/src/g2p_payments_bridge_core/models/: __init__.py  disburse.py  msg_header.py
gctb-mojaloop-sdk-payment-backend/: README.md  k8s-mojaloop-payment-backend.yaml  payment_backend.py
gctb-simple-mpesa-payment-backend/: README.md  k8s-simple-mpesa-payment-backend.yaml  payment_backend.py
gctb-translate-id-fa/: README.md  pyproject.toml
gctb-translate-id-fa/src/gctb_translate_id_fa/: app.py  config.py
gpb-mojaloop-sdk-payment-backend/: README.md  payment_backend.py  pyproject.toml
gpb-mojaloop-sdk-payment-backend/src/gpb_mojaloop_sdk_payment_backend/: app.py  config.py
gpb-simple-mpesa-payment-backend/: README.md  payment_backend.py  pyproject.toml
gpb-simple-mpesa-payment-backend/src/gpb_simple_mpesa_payment_backend/: app.py  config.py
gpb-simple-mpesa-payment-backend/src/gpb_simple_mpesa_payment_backend/services/: __init__.py  payment_backend.py  simple_mpesa_payment_backend.py
gpb-translate-id-fa/: README.md  pyproject.toml
gpb-translate-id-fa/src/gpb_translate_id_fa/: app.py  config.py
gpb-translate-id-fa/src/gpb_translate_id_fa/services/: __init__.py  g2p_connect_id_translate.py
(+7 files in other folders)
