[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g2p-cash-transfer-bridge-core"
authors = [
  { name="OpenG2P", email="info@openg2p.org" },
]
description = "G2P Cash Transfer Bridge: Core"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]
dependencies = [
  "openg2p-fastapi-common",
  "openg2p-fastapi-auth",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://openg2p.org"
Documentation = "https://docs.openg2p.org/"
Repository = "https://github.com/OpenG2P/g2p-cash-transfer-bridge"
Source = "https://github.com/OpenG2P/g2p-cash-transfer-bridge"

[tool.hatch.version]
path = "src/g2p_cash_transfer_bridge_core/__init__.py"
