[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpb-translate-id-fa"
version = "0.1.0"
authors = [
  { name="OpenG2P", email="info@openg2p.org" },
]
description = "G2P Payments Bridge: Translate ID to Financial Address."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]
dependencies=[
  "g2p-payments-bridge-core",
  "openg2p-common-g2pconnect-id-mapper"
]

[project.urls]
Homepage = "https://openg2p.org"
Documentation = "https://docs.openg2p.org/"
Repository = "https://github.com/OpenG2P/g2p-payments-bridge"
Source = "https://github.com/OpenG2P/g2p-payments-bridge"
